Bug fix for large image overflow

--- a/src/components/SignatureWidget/ImageUploader/SignatureWidgetImageUploader.scss
+++ b/src/components/SignatureWidget/ImageUploader/SignatureWidgetImageUploader.scss
@@ -26,6 +26,7 @@
   padding: 10px;
 }
 .imageWrapper {
+  position: relative;
   height: calc(100% - 30px);
   width: 100%;
   border: 1px solid $button-default-bg-color;
